core/test/org.ebayopensource.vjet.test.core.jstojava/testFiles/org/ebayopensource/dsf/jst/validation/vjo/BugFixes/bad/Bug4668.js
vjo.ctype('org.ebayopensource.dsf.jst.validation.vjo.BugFixes.bad.Bug4668') //< public
.endType();